rustbook-ru/listings/ch10-generic-types-traits-and-lifetimes/listing-10-23/output.txt
$ cargo run
   Compiling chapter10 v0.1.0 (file:///projects/chapter10)
error[E0597]: `строка2` does not live long enough
 --> src/main.rs:6:44
  |
5 |         let строка2 = String::from("xyz");
  |             ------- binding `строка2` declared here
6 |         итог = наибольшее(строка1.as_str(), строка2.as_str());
  |                                            ^^^^^^^ borrowed value does not live long enough
7 |     }
  |     - `строка2` dropped here while still borrowed
8 |     println!("Наибольшая строка {итог}");
  |                                     -------- borrow later used here

For more information about this error, try `rustc --explain E0597`.
error: could not compile `chapter10` (bin "chapter10") due to 1 previous error
